usecases/KRAFT-autotls-ACLS-Ingress/3.kafka/kafka-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cp-ingress-kafka
  namespace: confluent
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bootstrap.35.246.125.225.nip.io
        - broker0.35.246.125.225.nip.io
        - broker1.35.246.125.225.nip.io
        - broker2.35.246.125.225.nip.io
  rules:
    - host: bootstrap.35.246.125.225.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kafka-bootstrap
                port:
                  number: 9092
    - host: broker0.35.246.125.225.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kafka-0-internal
                port:
                  number: 9092
    - host: broker1.35.246.125.225.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kafka-1-internal
                port:
                  number: 9092
    - host: broker2.35.246.125.225.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kafka-2-internal
                port:
                  number: 9092
